<resources>
    <string name="app_name">taskmaster</string>
    <string name="title_activity_order_form">OrderForm</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_task">Add Task</string>
    <string name="all_task">All Task</string>
    <string name="my_tasks">My Tasks</string>
    <string name="todo">TODO</string>
    <string name="temp">Temp</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="stringUsernameSaveSetting">Username:</string>
    <string name="task_detail">Task Detail</string>
    <string name="imagebuttontosettings">imageButtonToSettings</string>
    <string name="textUsernameView">UserName</string>
    <string name="textUsernameViewChange">"Username: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stringTaskTitle">Add Task</string>
    <string name="my_task">My Task</string>
    <string name="edit_task_title">Task Title</string>
    <string name="do_something">Do Something</string>
    <string name="total_task">Total task: 0</string>
    <string name="name_add_task_button">Add Task</string>
    <string name="edit_text_string_task_description">Task Description</string>
    <string name="stufflist">stufflist</string>
</resources>