<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="90dp"
        android:layout_height="26dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="32dp"
        android:background="#FAF3F3"
        android:text="@string/my_tasks"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/imageHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="177dp"
        android:text="@string/add_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageHome" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="177dp"
        android:text="@string/all_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/imageHome" />

    <ImageView
        android:id="@+id/imageHome"
        android:layout_width="322dp"
        android:layout_height="305dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="285dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_delete"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars[2]" />

</androidx.constraintlayout.widget.ConstraintLayout>