<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveSettingsActivity">

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <EditText
        android:id="@+id/editUsernameBox"
        android:layout_width="117dp"
        android:layout_height="59dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="236dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextView"
        app:layout_constraintVertical_bias="0.476"
        android:autofillHints="" />

    <TextView
        android:id="@+id/stringUsernameSaveSettings"
        android:layout_width="69dp"
        android:layout_height="20dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="201dp"
        android:layout_marginBottom="3dp"
        android:text="@string/stringUsernameSaveSetting"
        app:layout_constraintBottom_toTopOf="@+id/editUsernameBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="119dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userNameTextView"
        app:layout_constraintVertical_bias="0.986" />

</androidx.constraintlayout.widget.ConstraintLayout>
